--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 behat.yml
 composer.phar
 /vendor/
+.vagrant/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 .idea/workspace.xml
