--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     },
     "require-dev": {
         "behat/behat": "3.0.*",
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "4.8.*",
+        "phpspec/phpspec": "3.0.*"
     },
     "config": {
         "bin-dir": "bin/"
