--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "require": {
         "silex/silex": "2.0.*",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "graphaware/neo4j-php-client": "^4.5"
     },
     "require-dev": {
         "behat/behat": "3.0.*",
-        "phpunit/phpunit": "4.8.*",
+        "phpunit/phpunit": "5.5.*",
         "phpspec/phpspec": "3.0.*"
     },
     "config": {
