--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "phpunit/phpunit": "5.5.*",
         "phpspec/phpspec": "3.0.*"
     },
+    "autoload": {
+      "psr-4": {"Separation\\": "src/"}
+    },
     "config": {
         "bin-dir": "bin/"
     }
