--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "silex/silex": "2.0.*",
         "guzzlehttp/guzzle": "^6.2",
-        "graphaware/neo4j-php-client": "^4.5"
+        "graphaware/neo4j-php-client": "^4.5",
+        "phpcollection/phpcollection": "^0.5.0"
     },
     "require-dev": {
         "behat/behat": "3.0.*",
