--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "silex/silex": "2.0.*",
         "guzzlehttp/guzzle": "^6.2",
         "graphaware/neo4j-php-client": "^4.5",
-        "phpcollection/phpcollection": "^0.5.0"
+        "phpcollection/phpcollection": "^0.5.0",
+        "knplabs/github-api": "^1.7"
     },
     "require-dev": {
         "behat/behat": "3.0.*",
